--- a/src/app/Header/Header.module.scss
+++ b/src/app/Header/Header.module.scss
@@ -13,7 +13,11 @@ div.header {
   font-weight: 800;
 
   background-color: $white;
-  div button span {
-    margin-right: 0.5em;
+
+  div {
+    display: flex;
+    button span {
+      margin-right: 0.5em;
+    }
   }
 }
