Create mock countries

--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -5,6 +5,8 @@
 .mainContent {
   padding: 3rem 5rem;
 
-  display: flex;
-  justify-content: space-between;
+  .row {
+    display: flex;
+    justify-content: space-between;
+  }
 }
