--- a/src/app/Countries/Countries.module.scss
+++ b/src/app/Countries/Countries.module.scss
@@ -1,35 +1,47 @@
 @import "../../style/variables";
 
 div.container {
-  display: flex;
-  flex-wrap: wrap;
+  width: 100%;
 
-  justify-content: space-around;
+  display: grid;
+  column-gap: 2rem;
+  row-gap: 4rem;
+  grid-template-columns: repeat(auto-fit, minmax(16.5rem, 1fr));
 
   div.country {
-    width: 16.5rem;
-    height: 21rem;
+    position: relative;
 
-    margin: 0 1.5em;
-    margin-bottom: 4.6875rem;
-
-    flex-basis: auto;
-
+    width: 100%;
+    padding-bottom: calc(50% + 10rem);
     background-color: $white;
 
     border-radius: 5px;
     overflow: hidden;
 
-    div.image,
-    div.info {
-      height: 50%;
+    div.fullHeightContainer {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+
+      flex-direction: column;
+
+      div.image,
+      div.info {
+        box-sizing: border-box;
+        width: 100%;
+      }
     }
 
     div.image {
       background-color: lightcoral;
+      flex-grow: 1;
     }
+
     div.info {
-      margin: 1rem;
+      height: fit-content;
+      padding: 1.125rem 2rem;
 
       display: flex;
       flex-direction: column;
