--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
-@import "./style/fonts";
-@import "./style/variables";
-@import "./style/light";
+@import "./assets/style/fonts";
+@import "./assets/style/variables";
+@import "./assets/style/light";
 
 body {
   margin: 0;
