Add cursor pointer to the flags

--- a/src/app/Countries/Countries.module.scss
+++ b/src/app/Countries/Countries.module.scss
@@ -18,6 +18,7 @@ div.container {
     border-radius: 5px;
     overflow: hidden;
 
+    cursor: pointer;
     div.fullHeightContainer {
       position: absolute;
       width: 100%;
