Add a link to the main route on the Header

--- a/src/app/Header/Header.module.scss
+++ b/src/app/Header/Header.module.scss
@@ -15,6 +15,10 @@ div.header {
 
   background-color: $white;
 
+  a {
+    color: $oxford-blue;
+    text-decoration: none;
+  }
   div {
     display: flex;
 
