--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -12,6 +12,11 @@ $gray: #858585;
 $alabaster: #fafafa;
 $white: #ffffff;
 
+$background-color: $alabaster;
+$elements-color: $white;
+$input-color: $gray;
+$text-color: $woodsmoke;
+
 /* ------------------------------- Typography ------------------------------- */
 
 /* system typefaces */
