--- a/src/app/Filter/Filter.module.scss
+++ b/src/app/Filter/Filter.module.scss
@@ -11,7 +11,12 @@ div.filter {
   justify-content: space-between;
   align-items: center;
 
-  background-color: $white;
+  background-color: $elements-color;
+  color: $text-color;
 
   border-radius: 5px;
+
+  span svg path {
+    fill: $text-color;
+  }
 }
