--- a/src/app/CountryDetails/CountryDetails.module.scss
+++ b/src/app/CountryDetails/CountryDetails.module.scss
@@ -11,6 +11,9 @@ div.container {
   div.image {
     border-radius: 5px;
     width: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   div.info {
@@ -51,11 +54,14 @@ div.container {
   }
 
   &.skeleton {
+    div.image {
+      background: $skeleton-color;
+    }
     .name,
     .column,
     .bottomText {
       div {
-        background: rgba(0, 0, 0, 0.075);
+        background: $skeleton-color;
         margin: 1.4rem 0;
         height: 0.5rem;
         border-radius: 10px;
@@ -70,5 +76,3 @@ div.container {
 b {
   font-weight: 600;
 }
-
-// 4.25
