--- a/src/app/CountryDetails/CountryDetails.module.scss
+++ b/src/app/CountryDetails/CountryDetails.module.scss
@@ -6,7 +6,7 @@ div.container {
 
   display: flex;
 
-  color: $text-color;
+  color: var(--text-color);
 
   div.image {
     border-radius: 5px;
@@ -45,7 +45,7 @@ div.container {
       margin-top: 4.25rem;
       a {
         text-decoration: none;
-        color: $text-color;
+        color: var(--text-color);
         &:hover {
           text-decoration: underline;
         }
@@ -55,13 +55,13 @@ div.container {
 
   &.skeleton {
     div.image {
-      background: $skeleton-color;
+      background: var(--skeleton-color);
     }
     .name,
     .column,
     .bottomText {
       div {
-        background: $skeleton-color;
+        background: var(--skeleton-color);
         margin: 1.4rem 0;
         height: 0.5rem;
         border-radius: 10px;
