--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,5 @@
 @import "./assets/style/fonts";
 @import "./assets/style/variables";
-@import "./assets/style/light";
 
 body {
   margin: 0;
@@ -8,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: $background-color;
+  background-color: var(--background-color);
 }
 
 button,
