Use a Close Icon and make it remove the current selected option on click

--- a/src/app/Filter/Filter.module.scss
+++ b/src/app/Filter/Filter.module.scss
@@ -21,8 +21,11 @@ div.filter {
 
   border-radius: 5px;
 
-  span svg path {
-    fill: var(--text-color);
+  span {
+    display: flex;
+    svg path {
+      fill: var(--text-color);
+    }
   }
 }
 
