--- a/src/app/Header/Header.module.scss
+++ b/src/app/Header/Header.module.scss
@@ -4,8 +4,6 @@ div.header {
   box-sizing: border-box;
   height: 3.4em;
 
-  padding: 1em 3.4em;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,47 +13,58 @@ div.header {
 
   background-color: var(--elements-color);
 
-  a {
-    color: var(--text-color);
-    text-decoration: none;
-  }
-  div {
+  div.content {
+    padding: 0 6.25%;
+    width: 100%;
+    max-width: 1280px;
+    margin: auto;
+
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    button {
-      padding: 1em 2em;
-
-      border: none;
-      outline: none;
-      background: none;
-
-      display: flex;
-      align-items: center;
-
-      font-weight: 600;
-
-      border-radius: 10em;
-
+    a {
       color: var(--text-color);
+      text-decoration: none;
+    }
+    div {
+      display: flex;
 
-      cursor: pointer;
+      button {
+        padding: 1em 2em;
 
-      &,
-      span svg path {
-        fill: var(--text-color);
-        stroke: none;
-      }
+        border: none;
+        outline: none;
+        background: none;
 
-      span {
-        margin-right: 1em;
-      }
+        display: flex;
+        align-items: center;
 
-      &:hover {
-        background: var(--text-color);
-        color: var(--background-color);
+        font-weight: 600;
+
+        border-radius: 10em;
+
+        color: var(--text-color);
+
+        cursor: pointer;
+
+        &,
         span svg path {
-          fill: var(--background-color);
+          fill: var(--text-color);
           stroke: none;
+        }
+
+        span {
+          margin-right: 1em;
+        }
+
+        &:hover {
+          background: var(--text-color);
+          color: var(--background-color);
+          span svg path {
+            fill: var(--background-color);
+            stroke: none;
+          }
         }
       }
     }
