Add responsiveness to the searchbar and filter select

--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -17,3 +17,14 @@
     }
   }
 }
+
+@media (max-width: 692px) {
+  div.row {
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 2.5rem;
+    &:not(:first-child) {
+      margin-top: 1rem;
+    }
+  }
+}
