Add a shadow to the elements of the page

--- a/src/app/Countries/Countries.module.scss
+++ b/src/app/Countries/Countries.module.scss
@@ -20,6 +20,7 @@ div.container {
     overflow: hidden;
 
     color: var(--text-color);
+    box-shadow: 0 0 0.75rem 0.25rem rgba(0, 0, 0, 0.025);
 
     cursor: pointer;
     div.fullHeightContainer {
