--- a/src/app/Filter/Filter.module.scss
+++ b/src/app/Filter/Filter.module.scss
@@ -3,6 +3,7 @@
 div.container {
   position: relative;
   cursor: pointer;
+  box-shadow: 0 0 0.75rem 0.25rem rgba(0, 0, 0, 0.025);
 }
 
 div.filter {
