--- a/src/app/SearchBar/SearchBar.module.scss
+++ b/src/app/SearchBar/SearchBar.module.scss
@@ -6,6 +6,7 @@ div.searchBar {
   width: 30em;
 
   margin-right: 2.5rem;
+  box-shadow: 0 0 0.75rem 0.25rem rgba(0, 0, 0, 0.025);
 
   .field {
     box-sizing: border-box;
