--- a/src/app/BackButton/BackButton.module.scss
+++ b/src/app/BackButton/BackButton.module.scss
@@ -14,6 +14,8 @@ a.button {
   background: var(--elements-color);
   color: var(--text-color);
 
+  box-shadow: 0 0 0.75rem 0.25rem rgba(0, 0, 0, 0.025);
+
   span {
     display: flex;
     margin-right: 0.625rem;
