--- a/src/app/CountryDetails/CountryDetails.module.scss
+++ b/src/app/CountryDetails/CountryDetails.module.scss
@@ -10,7 +10,8 @@ div.container {
 
   color: var(--text-color);
 
-  img.image {
+  img.image,
+  div.image {
     width: calc(50% - (7.5rem / 2));
     border-radius: 5px;
   }
@@ -45,18 +46,21 @@ div.container {
       flex-wrap: wrap;
       align-items: center;
       a {
-        text-decoration: none;
+        margin-right: 0.625rem;
+        margin-bottom: 0.3125rem;
+        margin-top: 0.3125rem;
 
         padding: 0.375rem 1.125rem;
 
         border-radius: 5px;
 
+        text-decoration: none;
+
         background-color: var(--elements-color);
         color: var(--text-color);
 
-        margin-right: 0.625rem;
-        margin-bottom: 0.3125rem;
-        margin-top: 0.3125rem;
+        box-shadow: 0 0 0.75rem 0.25rem rgba(0, 0, 0, 0.025);
+
         &:first-of-type {
           margin-left: 0.625rem;
         }
@@ -68,9 +72,7 @@ div.container {
     margin-top: -0.75rem;
     div.image {
       background: var(--skeleton-color);
-      width: calc(50% - (7.5rem / 2));
       padding-bottom: 28%;
-      border-radius: 5px;
     }
     .name,
     .bottomText,
