--- a/src/app/CountryDetails/CountryDetails.module.scss
+++ b/src/app/CountryDetails/CountryDetails.module.scss
@@ -14,6 +14,7 @@ div.container {
   div.image {
     width: calc(50% - (7.5rem / 2));
     border-radius: 5px;
+    box-shadow: 0 0 0.75rem 0.25rem rgba(0, 0, 0, 0.025);
   }
 
   div.info {
